--- a/layout.css
+++ b/layout.css
@@ -8,6 +8,8 @@ h1 {
   font-family: "Open Sans";
   color: #2E6E80;
   text-transform: uppercase;
+  margin-left: 160px;
+  padding-top: 40px;
 }
 h2 {
   font-family: "Roboto";
@@ -43,7 +45,8 @@ h3 {
 .sidenav a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
-    font-size: 25px;
+    text-transform: uppercase;
+    font-size: 22px;
     color: #F6FFFA;
     display: block;
     font-family: "Ubuntu";
@@ -55,7 +58,6 @@ h3 {
 
 .main {
     margin-left: 160px; /* Same as the width of the sidenav */
-    font-size: 28px; /* Increased text to enable scrolling */
     padding: 0px 10px;
 }
 
