--- a/layout.css
+++ b/layout.css
@@ -21,7 +21,6 @@ h3 {
   color: #007997;
   text-transform: uppercase;
 }
-
 .port {
   border-radius: 50%;
   border: 5px solid;
@@ -29,7 +28,6 @@ h3 {
   width: 100px;
   height: 100px;
 }
-
 .sidenav {
     height: 100%;
     width: 160px;
@@ -41,7 +39,6 @@ h3 {
     overflow-x: hidden;
     padding-top: 20px;
 }
-
 .sidenav a {
     padding: 6px 8px 6px 16px;
     text-decoration: none;
@@ -51,17 +48,25 @@ h3 {
     display: block;
     font-family: "Ubuntu";
 }
-
 .sidenav a:hover {
     color: #E4FFF0;
 }
-
 .main {
     margin-left: 160px; /* Same as the width of the sidenav */
     padding: 0px 10px;
 }
-
 @media screen and (max-height: 450px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+}
+.fa-stack-1x, .fa-stack-2x {
+    width: 100%;
+    position: absolute;
+    height: auto;
+}
+ul {
+  list-style: none;
+}
+li {
+  display: inline-block;
 }
