--- a/layout.css
+++ b/layout.css
@@ -63,9 +63,10 @@ p {
     margin-left: 160px; /* Same as the width of the sidenav */
     padding: 0px 10px;
 }
-@media screen and (max-height: 450px) {
+@media only screen and (max-width: 500px) {
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 18px;}
+    .main {width: 100%; font-size: 15px;}
 }
 .fa-stack-1x, .fa-stack-2x {
     width: 100%;
