--- a/layout.css
+++ b/layout.css
@@ -81,7 +81,7 @@ li {
 @media only screen and (max-width: 500px) {
     .sidenav {
       padding-top: 15px;
-      width: 15%;
+      width: 110px;
     }
     .sidenav a {font-size: 18px;}
     .main {width: 100%;}
