--- a/layout.css
+++ b/layout.css
@@ -81,11 +81,14 @@ li {
 @media only screen and (max-width: 500px) {
     .sidenav {
       padding-top: 15px;
-      width: 130px;
+      width: 135px;
     }
     .sidenav a {font-size: 18px;}
     .main {width: 100%;}
     p{font-size: 15px;}
-    h1{font-size: 24px;}
+    h1{
+      font-size: 24px;
+      margin-left: 135px;
+    }
     h2{font-size: 21px;}
     h3{font-size: 18px;}
