--- a/layout.css
+++ b/layout.css
@@ -1,1 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans|Roboto|Krub|Ubuntu|K2D|Playfair+Display|Titillium+Web');
+h1, h2, h3 {
+  font-family: "Open Sans";
+  color: #8AB0AB;
+}
