--- a/layout.css
+++ b/layout.css
@@ -9,6 +9,10 @@ p {
 footer {
   background-color: #3E505B;
   text-align: center;
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
 }
 footer p {
   color: #8AB0AB;
