--- a/layout.css
+++ b/layout.css
@@ -37,11 +37,16 @@ i {
   color: #33403F;
   width: 25px;
   height: auto;
+  display: inline;
 }
 ul {
   list-style-type: none;
   margin: 0;
   padding: 0;
+}
+li a {
+  display: block;
+  width: 60px;
 }
 .navbar {
   background-color: #020A08;
