--- a/layout.css
+++ b/layout.css
@@ -49,9 +49,15 @@ ul {
   overflow: hidden;
   background-color: #020A08;
 }
+li {
+  border-right: 1px solid #bbb;
+}
+li:last-child{
+  border-right: none;
+}
 li a {
   float: left;
-  display: block;
+  display: inline-block;
   padding: 14px 16px;
   width: 60px;
 }
