--- a/layout.css
+++ b/layout.css
@@ -36,7 +36,7 @@ a {
 a:visited {
   text-decoration: none;
 }
-.icoro {
+i {
   color: #33403F;
   width: 150px;
   height: auto;
@@ -45,7 +45,7 @@ a:visited {
 i:hover {
   color: #4C605E;
 }
-ul {
+.navbar {
   width: 100%;
   top: 0;
   left: 0;
@@ -70,4 +70,10 @@ li a {
 }
 li a:hover {
   color: #94B7B2;
+}
+.iconslist {
+  list-style-type: none;
+}
+.icoro {
+  display: inline;
 }
