--- a/layout.css
+++ b/layout.css
@@ -13,6 +13,9 @@ p {
   font-family: "Roboto";
   color: #3E505B;
 }
+.desc {
+  page-break-after: always;
+}
 footer {
   background-color: #3E505B;
   text-align: center;
