--- a/layout.css
+++ b/layout.css
@@ -39,8 +39,7 @@ a:visited {
 }
 .fa-stack-1x {
   color: #33403F;
-  width: 150px;
-  height: auto;
+  font-size: 30px;
   display: inline;
 }
 i:hover {
